# qr_slip

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  config.env  default.conf  docker-compose.yml
migrations/2021-03-19-010649_create_user/: down.sql  up.sql
migrations/2021-04-08-220445_create_refresh_token/: up.sql
migrations/2021-05-02-114054_adjust_user_model/: down.sql  up.sql
resources/py/: README.md  qrGenerator.py
sql/: db.sql
src/: auth.rs  error.rs  main.rs  model.rs  schema.rs  templating.rs
src/resources/py/: README.md  qr_generator.py  qr_test.py
src/resources/templates/: qr_slip.html  qr_slip_snippet.html
src/templates/: qr_slip.html
src/templates/css/: style.css
