[package]
name = "qr_slip"
version = "0.1.0"
authors = ["robinfriedli <robinfriedli@icloud.com>"]
edition = "2018"

[dependencies]
bcrypt = "0.9.0"
chrono = "0.4.19"
diesel = { version = "1.4.6", features = ["chrono", "postgres", "r2d2", "uuidv07"] }
dotenv = "0.15.0"
exec-rs = "0.1.0"
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.24"
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
warp = "0.3"