[package]
name = "qr_slip"
version = "0.1.0"
authors = ["robinfriedli <robinfriedli@icloud.com>"]
edition = "2018"

[features]
default = []
auto_migration = ["diesel_migrations"]

[dependencies]
bcrypt = "0.9.0"
chrono = "0.4.19"
diesel = { version = "1.4.6", features = ["chrono", "postgres", "r2d2", "uuidv07"] }
dotenv = "0.15.0"
exec-rs = "0.1.0"
fern = { version = "0.6.0", features = ["date-based"] }
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"
log = "0.4.14"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.24"
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
warp = "0.3"

[dependencies.diesel_migrations]
version = "1.4.0"
optional = true
