[package]
name = "qr_slip"
version = "0.1.0"
authors = ["robinfriedli <robinfriedli@icloud.com>"]
edition = "2018"

[features]
default = []
auto_migration = ["diesel_migrations"]

[dependencies]
bcrypt = "0.9.0"
crossbeam-channel = "0.5.1"
chrono = "0.4.19"
dict_derive = "0.3.1"
diesel = { version = "1.4.6", features = ["chrono", "postgres", "r2d2", "uuidv07"] }
dotenv = "0.15.0"
exec-rs = "0.1.0"
fern = { version = "0.6.0", features = ["date-based"] }
futures-channel = "0.3.14"
iban_validate = "4.0.0"
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"
log = "0.4.14"
pyo3 = { version = "0.13.2", features = ["auto-initialize"] }
qrcode = "0.12.0"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
tera = "1.8.0"
thiserror = "1.0.24"
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
validator = { version = "0.13.0", features = ["derive"] }
warp = "0.3"
wkhtmltopdf = "0.3.0"

[dependencies.diesel_migrations]
version = "1.4.0"
optional = true
